impl entities & part of Resolver

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ transformers = "^4.21.2"
 sentencepiece = "^0.1.97"
 fastapi = "^0.80.0"
 uvicorn = {extras = ["standard"], version = "^0.18.3"}
+pandas = "^1.4.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
