--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ uvicorn = {extras = ["standard"], version = "^0.18.3"}
 pandas = "^1.4.3"
 Inject = "^4.3.1"
 dependency-injector = "^4.40.0"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
