--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+docker/data/redis/*
+
 # Created by https://www.toptal.com/developers/gitignore/api/macos,intellij,visualstudiocode,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,intellij,visualstudiocode,python
 
