--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,10 @@ pandas = "^1.4.3"
 Inject = "^4.3.1"
 dependency-injector = "^4.40.0"
 gunicorn = "^20.1.0"
+fugashi = "^1.2.1"
+ipadic = "^1.0.0"
+redis = "^4.5.2"
+python-dotenv = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
