--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,5 @@ services:
       - "8000:8000"
     volumes:
       - ./:/app
+    working_dir: /app
+    command: uvicorn main:app --host 0.0.0.0 --reload
